--- a/src/app/contact/contact.html
+++ b/src/app/contact/contact.html
@@ -236,7 +236,7 @@
             </svg>
             <div>
               <h3 class="font-semibold text-lg">Phone</h3>
-              <p class="text-gray-300">+63 (XXX) XXX-XXXX</p>
+              <p class="text-gray-300">(032) 345-5790</p>
             </div>
           </div>
 
